Fixed map overflow on small/zoomed screens

--- a/feature-libs/storefinder/styles/components/_store-finder-map.scss
+++ b/feature-libs/storefinder/styles/components/_store-finder-map.scss
@@ -3,9 +3,19 @@
     width: 100%;
     height: 100%;
 
-    @include media-breakpoint-down(sm) {
-      height: 30rem;
-      width: 100%;
+    // TODO:  Remove feature flag next major
+    @include forVersion(6.8) {
+      @include media-breakpoint-down(md) {
+        height: 30rem;
+        width: 100%;
+      }
+    }
+
+    @include forVersion(1, 6.7) {
+      @include media-breakpoint-down(sm) {
+        height: 30rem;
+        width: 100%;
+      }
     }
   }
 }
